# nfl

./: .gitignore  CLAUDE.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_PLAN_STAGE_3C.md  INTEGRATION_TESTS_SUMMARY.md  README.md  README_XGBOOST.md  STAGE2_IMPLEMENTATION_PLAN.md  STAGE2_QUICK_REFERENCE.md  STAGE4_IMPLEMENTATION_PLAN.md  STAGE_3C_DATA_FLOW.md  STAGE_3C_QUICK_REFERENCE.md  TEST_EXECUTION_REPORT.md  TRAINING_PIPELINE_SUMMARY.md  TROUBLESHOOTING.md  UNIT_TESTS_SUMMARY.md  VERIFICATION_REPORT.md  XGBOOST_ARCHITECTURE.md  XGBOOST_IMPLEMENTATION_GUIDE.md  XGBOOST_IMPLEMENTATION_PLAN.md  XGBOOST_SUMMARY.md  diagnose_schemas.py  fetch_josh_allen_stats.py  fix_schemas.py  mlflow_config.py  pyproject.toml  run_pipeline.py  run_pipeline_2025.py  setup_database.py  test_pipeline.py  test_rolling_stats.py  test_stage2.py  train_models.py  verify_production_code.py
docs/: CACHE.txt  CONFIG.txt  FUNCTIONS.txt  INDEX.txt  ROLLING_STATS_IMPLEMENTATION_PLAN.md  UTILITIES.txt
docs/nflreadr/: clear_cache.txt  dictionary_combine.txt  dictionary_contracts.txt  dictionary_depth_charts.txt  dictionary_draft_picks.txt  dictionary_ftn_charting.txt  dictionary_injuries.txt  dictionary_nextgen_stats.txt  dictionary_participation.txt  dictionary_pbp.txt  dictionary_player_stats.txt  dictionary_players.txt  dictionary_roster_status.txt  dictionary_rosters.txt  dictionary_schedules.txt  dictionary_snap_counts.txt  dictionary_team_stats.txt  dictionary_trades.txt  get_current_season.txt  get_current_week.txt  load_combine.txt  load_contracts.txt  load_depth_charts.txt  load_draft_picks.txt  load_ff_opportunity.txt  load_ff_playerids.txt  load_ff_rankings.txt  load_ftn_charting.txt  load_injuries.txt  load_nextgen_stats.txt  load_officials.txt  load_participation.txt  load_pbp.txt  load_player_stats.txt  load_players.txt  load_rosters.txt  load_rosters_weekly.txt  load_schedules.txt  load_snap_counts.txt  load_team_stats.txt  (+1 more)
src/: __init__.py  batch_processor.py  config.py  data_pipeline.py  database.py  table_schemas.py
src/models/: __init__.py  base.py  model_registry.py  xgboost_predictor.py
src/training/: __init__.py  trainer.py
tests/: README.md  README_INTEGRATION_TESTS.md  README_ML_UNIT_TESTS.md  __init__.py  test_data_pipeline_integration.py  test_end_to_end.py  test_ml_pipeline_integration.py  test_stage2_unit.py  test_stage3a_unit.py  test_stage3b_unit.py  test_stage3c_unit.py  test_stage4_unit.py  test_training_pipeline_unit.py  test_xgboost_unit.py
