[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.1.0"
description = "NFL Predictor"
authors = [
    {name = "Freddy Song", email = "fredsong99@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy>=0.1.2",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["src"]
