[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.1.0"
description = "NFL Predictor"
authors = [
    {name = "Freddy Song", email = "fredsong99@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy>=0.1.2",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "duckdb>=1.4.0",
    "polars>=0.20.0",
    "pyarrow>=19.0.0,<20.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "lightgbm>=4.1.0,<5.0.0",
    "mlflow>=2.9.0,<3.0.0",
    "joblib>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
ml-analysis = [
    "shap>=0.43.0",
    "optuna>=3.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
